--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ body {
     margin: 0 auto;
     padding: 1.8em 1em;
     max-width: 1280px;
-    font-family: "myriad pro";
+    font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     line-height: 1.5em;
     color: #545454;
